# codified-context-architecture

./: .gitignore  CITATION.cff  README.md
case-study/: CLAUDE.md  hooks-config.json
case-study/agent-specs/: code-reviewer-game-dev.md  coordinate-wizard.md  level-designer.md  network-protocol-designer.md  plan.md  sprite-2d-artist.md
case-study/context-docs/: drop-system.md  enemy-combat-system.md  ghost-mode.md  host-authoritative-damage-spec.md  save-system.md  ui-sync-patterns.md
case-study/mcp-server/: server.py
case-study/scripts/: context-drift-check.py  validate-architecture.sh
data/: README.md  analyze_impact.py  data-collection-methodology.md  data-extraction-methodology.md  extract_prompts.py  reconstruct_sessions.py
data/case-study-evidence/: README.md
data/case-study-excerpts/: README.md  cs1-combatrng-determinism.md  cs2-ui-sync-routing.md  cs3-boss-fight-framework.md  cs4-save-system-documentation.md  cs5-coordinate-wizard.md  cs6-drop-system.md
data/samples/: key_plans.csv  prompts_monthly.csv
framework/: constitution-template.md
framework/agent-specs/: example-architect.md  example-feature-builder.md
framework/context-docs/: example-feature-workflow.md  example-interaction-system.md
framework/scripts/: context-drift-check.py  validate-architecture.sh
mcp-server/: README.md  __init__.py  __main__.py  pyproject.toml  server.py
paper/: README.md
quickstart/: README.md
quickstart/agent-factory/: AGENT.md
quickstart/constitution-factory/: AGENT.md
quickstart/context-factory/: AGENT.md
quickstart/mcp-server/: server.py
