[project]
name = "context7-mcp"
version = "0.1.0"
description = "Context discovery MCP server for project architecture retrieval"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
context7-mcp = "context7_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
